# wgpu-compute-shader-push-constant

./: Cargo.toml
src/: main.rs  shader.wgsl
